- 
    Bug 
- 
    Resolution: Fixed
- 
    P1: Critical 
- 
    6.0
- 
    None
tst_toolsupport::offsets fails on Android for Qt 6.0.0
agent:2020/09/24 10:12:00 build.go:302: FAIL! : tst_toolsupport::offsets(QFilePrivate::fileName) Compared values are not the same agent:2020/09/24 10:12:00 build.go:302: Loc: [tst_toolsupport.cpp(88)] agent:2020/09/24 10:12:00 build.go:302: Totals: 10 passed, 1 failed, 0 skipped, 0 blacklisted, 7ms
- resulted from
- 
                     QTBUG-98120
        Fix failing qtbase CI tests for Android QTBUG-98120
        Fix failing qtbase CI tests for Android-         
- In Progress
 
-         
- 
                     QTBUG-87025
        Report Android failing tests in CI QTBUG-87025
        Report Android failing tests in CI-         
- Closed
 
-