tst_toolsupport: fix alignment for x86

The alignment was updated but never tested in the CI, because the
only 32-bit arch in CI is Android x86 emulator, which was enabled
only recently.

This commit amends 513be303b7d82f6f81a7b076f38e0b4552e430ef

This patch is valid for 6.2 only, because in 6.3+ the test was updated
by 63a35898f4990963fe91acd565df49111a281fa4

Task-number: QTBUG-87396
Change-Id: I89bdc78c58d34eb67cd30227cdb307566e283512
Reviewed-by: Thiago Macieira <thiago.macieira@intel.com>
Reviewed-by: hjk <hjk@qt.io>
Reviewed-by: Assam Boudjelthia <assam.boudjelthia@qt.io>