tests/auto/other/toolsupport/tst_toolsupport.cpp
@@ -142,7 +142,7 @@ void tst_toolsupport::offsets_data()
 #ifdef Q_PROCESSOR_X86
         // x86 32-bit has weird alignment rules. Refer to QtPrivate::AlignOf in
         // qglobal.h for more details.
-        data << 188 << 304;
+        data << 192 << 304;
 #else
         data << 196 << 304;
 #endif
